--- a/js/.jshintrc
+++ b/js/.jshintrc
@@ -25,6 +25,8 @@
 		"oc_current_user":true,
 		"oc_requesttoken": true,
 		"requestToken": true,
-		"t": true
+		"t": true,
+		"vis": true,
+		"Handlebars": true
 	}
 }
