--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
 	"compilerOptions": {
-		"target": "ES5",
+		"target": "es5",
+		"strict": true,
+		"module": "es2015",
+		"moduleResolution": "node",
 		"removeComments": true,
 		"strictNullChecks": true,
 		"noImplicitThis": true,
