--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 	],
 	"scripts": {
 		"dev": "webpack  --progress --colors --watch",
-		"build-dev": "webpack",
+		"build-dev": "webpack -d",
 		"build": "webpack -p"
 	},
 	"dependencies": {
@@ -36,10 +36,14 @@
 		"underscore": "^1.8.3",
 		"vis": "4.21.0",
 		"vue": "^2.5.3",
+		"vue-class-component": "^6.1.0",
 		"vue-loader": "^13.5.0",
 		"vue-router": "^2.8.1",
 		"vue-template-compiler": "^2.5.3",
 		"vuex": "^3.0.1",
 		"webpack": "^3.8.1"
+	},
+	"devDependencies": {
+		"@types/es6-promise": "0.0.33"
 	}
 }
