--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,11 @@
 		"alwaysStrict": true,
 		"forceConsistentCasingInFileNames": true,
 		"noUnusedLocals": true,
-		"noUnusedParameters": true
+		"noUnusedParameters": true,
+		"experimentalDecorators": true,
+		"typeRoots": ["node_modules/@types", "typings"]
 	},
 	"include": [
-		"js/*"
+		"js/**/*.ts"
 	]
 }
