--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
 		"build": "webpack -p"
 	},
 	"dependencies": {
+		"@types/es6-promise": "0.0.33",
 		"@types/jquery": "^3.2.16",
 		"@types/markdown-it": "^0.0.4",
+		"@types/vis": "^4.21.0",
 		"axios": "^0.17.1",
 		"babel-core": "^6.26.0",
 		"babel-loader": "^7.1.2",
@@ -35,15 +37,12 @@
 		"uglify-js": "^3.1.9",
 		"underscore": "^1.8.3",
 		"vis": "4.21.0",
-		"vue": "^2.5.3",
+		"vue": "^2.5.5",
 		"vue-class-component": "^6.1.0",
 		"vue-loader": "^13.5.0",
 		"vue-router": "^2.8.1",
-		"vue-template-compiler": "^2.5.3",
+		"vue-template-compiler": "^2.5.5",
 		"vuex": "^3.0.1",
 		"webpack": "^3.8.1"
-	},
-	"devDependencies": {
-		"@types/es6-promise": "0.0.33"
 	}
 }
