--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
 		"Mindmaps"
 	],
 	"scripts": {
-		"dev": "webpack  --progress --colors --watch",
-		"build-dev": "webpack -d",
-		"build": "webpack -p"
+		"dev": "webpack --progress --colors --watch",
+		"build": "cross-env NODE_ENV=production webpack -p",
+		"build-dev": "cross-env NODE_ENV=development webpack -d"
 	},
 	"dependencies": {
 		"@types/es6-promise": "0.0.33",
@@ -30,12 +30,11 @@
 		"axios": "^0.17.1",
 		"babel-core": "^6.26.0",
 		"babel-loader": "^7.1.2",
+		"cross-env": "^5.1.1",
 		"css-loader": "^0.28.7",
 		"markdown-it": "^8.4.0",
 		"ts-loader": "^3.1.1",
 		"typescript": "^2.6.1",
-		"uglify-js": "^3.1.9",
-		"underscore": "^1.8.3",
 		"vis": "4.21.0",
 		"vue": "^2.5.5",
 		"vue-class-component": "^6.1.0",
