Added basic JS unit tests

--- a/package.json
+++ b/package.json
@@ -20,19 +20,29 @@
 	"scripts": {
 		"dev": "webpack --progress --colors --watch",
 		"build": "cross-env NODE_ENV=production webpack -p",
-		"build-dev": "cross-env NODE_ENV=development webpack -d"
+		"build-dev": "cross-env NODE_ENV=development webpack -d",
+		"test": "mocha-webpack js/tests/**/*.spec.ts"
 	},
 	"dependencies": {
+		"@types/chai": "^4.0.5",
 		"@types/es6-promise": "0.0.33",
 		"@types/jquery": "^3.2.16",
 		"@types/markdown-it": "^0.0.4",
+		"@types/mocha": "^2.2.44",
+		"@types/moxios": "^0.4.7",
+		"@types/sinon": "^4.0.0",
 		"@types/vis": "^4.21.0",
 		"axios": "^0.17.1",
 		"babel-core": "^6.26.0",
 		"babel-loader": "^7.1.2",
+		"chai": "^4.1.2",
 		"cross-env": "^5.1.1",
 		"css-loader": "^0.28.7",
 		"markdown-it": "^8.4.0",
+		"mocha": "^4.0.1",
+		"mocha-webpack": "^1.0.1",
+		"moxios": "^0.4.0",
+		"sinon": "^4.1.2",
 		"ts-loader": "^3.1.1",
 		"typescript": "^2.6.1",
 		"vis": "4.21.0",
