Moved stub creation to setup file

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"dev": "webpack --progress --colors --watch",
 		"build": "cross-env NODE_ENV=production webpack -p",
 		"build-dev": "cross-env NODE_ENV=development webpack -d",
-		"test": "mocha-webpack js/tests/**/*.spec.ts"
+		"test": "mocha-webpack --include js/tests/Setup.ts js/tests/**/*.spec.ts"
 	},
 	"dependencies": {
 		"@types/chai": "^4.0.5",
