--- a/package.json
+++ b/package.json
@@ -24,14 +24,6 @@
 		"test": "mocha-webpack --include js/tests/Setup.ts js/tests/**/*.spec.ts"
 	},
 	"dependencies": {
-		"@types/chai": "^4.0.5",
-		"@types/es6-promise": "0.0.33",
-		"@types/jquery": "^3.2.16",
-		"@types/markdown-it": "^0.0.4",
-		"@types/mocha": "^2.2.44",
-		"@types/moxios": "^0.4.7",
-		"@types/sinon": "^4.0.0",
-		"@types/vis": "^4.21.0",
 		"axios": "^0.17.1",
 		"babel-core": "^6.26.0",
 		"babel-loader": "^7.1.2",
@@ -53,5 +45,15 @@
 		"vue-template-compiler": "^2.5.5",
 		"vuex": "^3.0.1",
 		"webpack": "^3.8.1"
+	},
+	"devDependencies": {
+		"@types/chai": "^4.0.5",
+		"@types/es6-promise": "0.0.33",
+		"@types/jquery": "^3.2.16",
+		"@types/markdown-it": "^0.0.4",
+		"@types/mocha": "^2.2.44",
+		"@types/moxios": "^0.4.7",
+		"@types/sinon": "^4.0.0",
+		"@types/vis": "^4.21.0"
 	}
 }
