--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"experimentalDecorators": true,
-		"typeRoots": ["node_modules/@types", "typings"]
+		"typeRoots": ["node_modules/@types", "typings"],
+		"lib": ["es2015", "dom"]
 	},
 	"include": [
 		"js/**/*.ts"
