--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"chai": "^4.1.2",
 		"cross-env": "^5.1.1",
 		"css-loader": "^0.28.7",
+		"lodash": "^4.17.4",
 		"markdown-it": "^8.4.0",
 		"mocha": "^4.0.1",
 		"mocha-webpack": "^1.0.1",
@@ -41,6 +42,7 @@
 		"vue": "^2.5.5",
 		"vue-class-component": "^6.1.0",
 		"vue-loader": "^13.5.0",
+		"vue-property-decorator": "^6.0.0",
 		"vue-router": "^2.8.1",
 		"vue-template-compiler": "^2.5.5",
 		"vuex": "^3.0.1",
@@ -50,6 +52,7 @@
 		"@types/chai": "^4.0.5",
 		"@types/es6-promise": "0.0.33",
 		"@types/jquery": "^3.2.16",
+		"@types/lodash": "^4.14.85",
 		"@types/markdown-it": "^0.0.4",
 		"@types/mocha": "^2.2.44",
 		"@types/moxios": "^0.4.7",
