--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 		"mocha": "^4.0.1",
 		"mocha-webpack": "^1.0.1",
 		"moxios": "^0.4.0",
+		"node-sass": "^4.7.2",
+		"sass-loader": "^6.0.6",
 		"sinon": "^4.1.2",
 		"ts-loader": "^3.1.1",
 		"typescript": "^2.6.1",
