--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"Mindmaps"
 	],
 	"scripts": {
-		"dev": "webpack --progress --colors --watch",
+		"dev": "cross-env NODE_ENV=development webpack-dev-server --open",
 		"build": "cross-env NODE_ENV=production webpack -p",
 		"build-dev": "cross-env NODE_ENV=development webpack -d",
 		"test": "mocha-webpack --include js/tests/Setup.ts js/tests/**/*.spec.ts"
@@ -54,11 +54,13 @@
 		"@types/chai": "^4.0.5",
 		"@types/es6-promise": "0.0.33",
 		"@types/jquery": "^3.2.16",
+		"@types/jqueryui": "^1.11.37",
 		"@types/lodash": "^4.14.85",
 		"@types/markdown-it": "^0.0.4",
 		"@types/mocha": "^2.2.44",
 		"@types/moxios": "^0.4.7",
 		"@types/sinon": "^4.0.0",
-		"@types/vis": "^4.21.0"
+		"@types/vis": "^4.21.0",
+		"webpack-dev-server": "^2.9.4"
 	}
 }
