--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"babel-core": "^6.26.0",
 		"babel-loader": "^7.1.2",
 		"chai": "^4.1.2",
+		"copy-webpack-plugin": "^4.2.3",
 		"cross-env": "^5.1.1",
 		"css-loader": "^0.28.7",
 		"lodash": "^4.17.4",
