Reverted PHP 7.1 syntax + reverted sqlite drop + more tests

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 		}
 	],
 	"require-dev": {
-		"christophwurst/nextcloud": "^12.0",
+		"christophwurst/nextcloud": "dev-master",
 		"phpunit/phpunit": "^5.4",
 		"league/factory-muffin": "^3.0",
 		"league/factory-muffin-faker": "^2.0"
